--- a/03-discriptive.Rmd
+++ b/03-discriptive.Rmd
@@ -4,15 +4,23 @@
 >
 > --– Richard Feynman
 
-Talk about inferential and descriptive statistics, and the distinction between the two...
+```{r prelim-opts, echo=FALSE}
+knitr::opts_chunk$set(
+  comment = "R>", 
+  warning = FALSE, 
+  message = FALSE
+)
+```
 
-Decriptive statistics and the associated statistical and graphical data summaries will be covered in Chapters 3 (this one) and 5. In Chapter 4 we will introduce the concepts of data distributions, knowledge of which is required to select the most appropriate inferential statistical methods. So, the materials covered in the next three chapters concern a broad discussion that will aid us in understanding our data better prior to analysing it. In this work flow it emerges that descriptive statistics generally precedes the inferential statistics.
+<!-- Talk about inferential and descriptive statistics, and the distinction between the two... -->
 
-Let us now turn to some of the most commonly used discriptive statistics, and learn about how to calculate them.
+Descriptive statistics and their associated statistical and graphical data summaries will be covered in Chapters 3 (this one) and Chapter 5. In Chapter 4 we will introduce the concepts of data distributions, knowledge of which is required to select the most appropriate inferential statistical methods. So, the materials covered in the next three chapters concern a broad discussion that will aid us in understanding our data better prior to analysing it. In this work flow it emerges that descriptive statistics generally precede inferential statistics.
+
+Let us now turn to some of the most commonly used descriptive statistics, and learn about how to calculate them.
 
 ## Samples and populations
 
-This is a simple toy example. In real life, however, our data will be available in a tibble (initially perhaps captured in MS Excel before importing it as a `.csv` file into R, where the tibble is created). To see how this can be done more realistically using actual data, let us turn to the ChickenWeight data, which, as before, place in the object `chicks`. Recall the pipe operator (`%>%`, pronounced 'then') that we introduced in the Intro R Workshop --- we will use that here, throughout. Let us calculate the sample size:
+This is a simple toy example. In real life, however, our data will be available in a tibble (initially perhaps captured in MS Excel before importing it as a `.csv` file into R, where the tibble is created). To see how this can be done more realistically using actual data, let us turn to the ChickenWeight data, which, as before, we place in the object `chicks`. Recall the pipe operator (`%>%`, pronounced 'then') that we introduced in the Intro R Workshop --- we will use that here, throughout. Let us calculate the sample size:
 
 To determine the sample size we can use the `length()` or `n()` functions; the latter is for use within **dplyr**'s `summarise()` method, and it is applied without writing anything inside of the `()`, like this:
 
@@ -20,6 +28,7 @@ To determine the sample size we can use the `length()` or `n()` functions; the l
 # first load the tidyverse packages that has the pipe operator, %>%
 library(tidyverse)
 chicks <- as_tibble(ChickWeight)
+
 # how many weights are available across all Diets and Times?
 chicks %>% 
   summarise(length = n())
@@ -59,12 +68,14 @@ dat1 <- c(23, 45, 23, 66, 13)
 mean(dat1)
 ```
 
+Below, we use another tidyverse package, **`dplyr`** and its `summarise()` function, whose purpose it is to *summarise* the entire column into one summary statistic, in this case the mean:
+
 ```{r}
 chicks %>% 
   summarise(mean_wt = mean(weight))
 ```
 
-Above, we use another tidyverse package, **`dplyr`** and its `summarise()` function, whose purpose it is to *summarise* the entire column into one summary statistic, in this case the mean. We can achieve the same using the more traditional syntax, which in some instances may be slightly less verbose, but less user-friendly, especially when multiple summary statistics are required (we shall later on how we can summarise a vector of data into multiple statistics). The traditional syntax is:
+We can achieve the same using the more traditional syntax, which in some instances may be slightly less verbose, but less user-friendly, especially when multiple summary statistics are required (we shall later on how we can summarise a vector of data into multiple statistics). The traditional syntax is:
 
 ```{r}
 # the '$' operator is used to denote a variable inside of the tibble
@@ -82,7 +93,7 @@ chicks %>%
 
 > **Question:** What happens when there are missing values (`NA`)? Consult the help file for the `mean()` function, discuss amongst yourselves, and then provide a demonstration to the class of how you would handle missing values. Hint: use the `c()` function to capture a series of data that you can then use to demonstrate your understanding.
 
-At this point it might be useful to point that the mean (or any function for that matter, even one that does not yet exist) can be programatically calculated. Let us demonstrate the principle using the mean:
+At this point it might be useful to point out that the mean (or any function for that matter, even one that does not yet exist) can be programatically calculated. Let us demonstrate the principle by reproducing the mean function from the constituent parts:
 
 ```{r}
 chicks %>% 
@@ -102,7 +113,7 @@ chicks %>%
   summarise(med_wt = median(weight))
 ```
 
-The median is therefore the value that separates the lower half of the sample data from the higher half. In normally distributed continuous data the median is equal to the mean. Comparable concepts to the median are the *1st and 3rd quartiles*, which, respectively, separate the first quarter of the data from the last quarter --- see later. The advantage of the median over the mean is that it is unaffected (i.e. not skewed) by extreme values or outliers, and it gives an idea of the typical value of the sample. The median is also used to provide a robust description of non-parametric data (see Chapter X for a discussion on normal data and other data distributions).
+The median is therefore the value that separates the lower half of the sample data from the upper half. In normally distributed continuous data the median is equal to the mean. Comparable concepts to the median are the *1st and 3rd quartiles*, which, respectively, separate the first quarter of the data from the last quarter --- see later. The advantage of the median over the mean is that it is unaffected (i.e. not skewed) by extreme values or outliers, and it gives an idea of the typical value of the sample. The median is also used to provide a robust description of non-parametric data (see Chapter 4 for a discussion on normal data and other data distributions).
 
 ## Measures of variation and spread
 
@@ -115,7 +126,7 @@ Statistic             Function
 --------------------- ---------------------
 Variance              `var()`
 
-Standard deviation    `median()`
+Standard deviation    `sd()`
 
 Minimum               `min()`
 
@@ -141,13 +152,13 @@ chicks %>%
   summarise(sd_wt = sd(weight))
 ```
 
-The interpretation of the concepts mean and median is fairly straight forward and intuitive. Not so for the measures of variance. What does $S$ represent? Firstly, the unit of measurement of $S$ is the same as that of $\bar{x}$ (but the variance doesn't share this characteric). If temperature is measured in °C, then $S$ also takes a unit of °C. Since $S$ measures the dispersion *around* the mean, we write it as $\bar{x} \pm S$ (note that often the mean and standard deviation are written with the letters *mu* and *sigma*, respectively; i.e. $\mu \pm \sigma$). The smaller $S$ the closer the sample data are to $\bar{x}$, and the larger the value is the further away they will spread out from $\bar{x}$. So, it tells us about the proportion of observations above and below $\bar{x}$. But what proportion? We invoke the the 68-95-99.7 rule: ~68% of the population (as represented by a random sample of $n$ observations taken from the population) falls within 1$S$ of $\bar{x}$ (i.e. ~34% below $\bar{x}$ and ~34% above $\bar{x}$); ~95% of the population falls within 2$S$; and ~99.7% falls within 3$S$.
+The interpretation of the concepts of mean and median are fairly straight forward and intuitive. Not so for the measures of variance. What does $S$ represent? Firstly, the unit of measurement of $S$ is the same as that of $\bar{x}$ (but the variance doesn't share this characteristic). If temperature is measured in °C, then $S$ also takes a unit of °C. Since $S$ measures the dispersion *around* the mean, we write it as $\bar{x} \pm S$ (note that often the mean and standard deviation are written with the letters *mu* and *sigma*, respectively; i.e. $\mu \pm \sigma$). The smaller $S$ the closer the sample data are to $\bar{x}$, and the larger the value is the further away they will spread out from $\bar{x}$. So, it tells us about the proportion of observations above and below $\bar{x}$. But what proportion? We invoke the the 68-95-99.7 rule: ~68% of the population (as represented by a random sample of $n$ observations taken from the population) falls within 1$S$ of $\bar{x}$ (i.e. ~34% below $\bar{x}$ and ~34% above $\bar{x}$); ~95% of the population falls within 2$S$; and ~99.7% falls within 3$S$.
 
 ```{r rmarkdown, echo = TRUE, fig.margin = TRUE, fig.cap = "The proportions of data representation by the standard deviation. Credit: [Wikipedia](https://en.wikipedia.org/wiki/Standard_deviation)"}
 knitr::include_graphics("figures/Standard_deviation_diagram.svg")
 ```
 
-Like the mean, $S$ is affected by extreme values and outliers, so before we attach $S$ as a summary statistic to describe some data, we need to ensure that the data are in fact normally distributed. We will talk about how to do this in a later section (Section X), where we will go over the numerous ways to check the assumption of normality. When the data are found to be non-normal, we need to find appropriate ways to express the spread of the data. Enter the quartiles.
+Like the mean, $S$ is affected by extreme values and outliers, so before we attach $S$ as a summary statistic to describe some data, we need to ensure that the data are in fact normally distributed. We will talk about how to do this in Chapter 6, where we will go over the numerous ways to check the assumption of normality. When the data are found to be non-normal, we need to find appropriate ways to express the spread of the data. Enter the quartiles.
 
 ### Quantiles
 
@@ -156,7 +167,7 @@ A more forgiving approach (forgiving of the extremes, often called 'robust') is 
 ```{r}
 quantile(chicks$weight)
 
-wt_summary <- chicks %>% 
+chicks %>% 
   summarise(min_wt = min(weight),
             qrt1_wt = quantile(weight, p = 0.25),
             med_wt = median(weight),
@@ -164,26 +175,55 @@ wt_summary <- chicks %>%
             max_wt = max(weight))
 # note median(weight) is the same as quantile(weight, p = 0.5) 
 # in the summarise() implementation, above
-wt_summary
 ```
 
-> *Question:* What is different about the `quantile()` function that caused us to specify the calculation in the way in we we have done so, above? You will have to consult the help file, read it, understand it, think about it, and experiment with the ideas. Take 15 minutes to figure it out and report back to the class.
+> *Question:* What is different about the `quantile()` function that caused us to specify the calculation in the way in which we have done so above? You will have to consult the help file, read it, understand it, think about it, and experiment with the ideas. Take 15 minutes to figure it out and report back to the class.
 
 ### The minimum, maximum and range
 
 A description of the extent of the data can also be provided by the functions `min()`, `max()` and `range()`. 
 
-These statistics apply to data of any distribution, and not only to normal data. This if often the first place you want to start when looking at the data for the first time.
+These statistics apply to data of any distribution, and not only to normal data. This if often the first place you want to start when looking at the data for the first time. We've seen above how to use `min()` and `max()`, so below we will quickly look at how to use `range()` in both the base R and tidy methods:
+
+```{r}
+range(chicks$weight)
+
+chicks %>% 
+  summarise(lower_wt = range(weight)[1],
+            upper_wt = range(weight)[2])
+```
+
+Note that `range()` actually gives us the minimum and maximum values, and not the difference between them. To find the range value properly we must be a bit more clever:
+
+```{r}
+range(chicks$weight)[2] - range(chicks$weight)[1]
+
+chicks %>% 
+  summarise(range_wt = range(weight)[2] - range(weight)[1])
+```
 
 ## Missing values
 
-Put some text here.
+As mentioned in Chapter 2, missing data are pervaise in the biological sciences. Happily for us, R is designed to handle these data easily. It is important to note here explicitly that all of the basic functions in R will by default *NOT* ignore missing data. This has been done so as to prevent the user from accidentally forgetting about the missing data and potentially making errors in later stages in an analysis. Therefore, we must explicitly tell R when we want it to ommit missing values from a calculation. Let's create a small vector of data to demonstrate this:
+
+```{r}
+dat1 <- c(NA, 12, 76, 34, 23)
+
+# Without telling R to ommit missing data
+mean(dat1)
+
+# Ommitting the missing data
+mean(dat1, na.rm = TRUE)
+```
+
+Note that this argument, `na.rm = TRUE` may be used in all of the functions we have seen thus far in this chapter.
 
 ## Descriptive statistics by group
 
-Above we have revised the basic kinds of summary statistics, and how to calculate them. This is nice. But it can be more useful. The real reason why we might want to see the desriptive statistics is to facilitate comparisons between groups. In the chicks data we calculated the mean (etc.) for all the chickens, over all the diet groups to which they had been assigned (there are four factors, i.e. Diets 1 to 4), and over the entire duration of the experiment (the experiment lasted 21 days). It would be more useful to see what the weights are of the chickens in each of the four groups at the end of the experiment --- we can compare means (± SD) and medians (± interquartile ranges, etc.), for instance. You'll notice now how the measures of central tendency is being combined with the measures of variability/range. Further, we can augment this statistical summary with many kinds of graphical summaries, which will be far more revealing of differences (if any) amongst groups. We will revise how to produce the group statistics and show a range of the graphical displays.
+Above we have revised the basic kinds of summary statistics, and how to calculate them. This is nice. But it can be more useful. The real reason why we might want to see the descriptive statistics is to facilitate comparisons between groups. In the chicks data we calculated the mean (etc.) for all the chickens, over all the diet groups to which they had been assigned (there are four factors, i.e. Diets 1 to 4), and over the entire duration of the experiment (the experiment lasted 21 days). It would be more useful to see what the weights are of the chickens in each of the four groups at the end of the experiment --- we can compare means (± SD) and medians (± interquartile ranges, etc.), for instance. You'll notice now how the measures of central tendency is being combined with the measures of variability/range. Further, we can augment this statistical summary with many kinds of graphical summaries, which will be far more revealing of differences (if any) amongst groups. We will revise how to produce the group statistics and show a range of graphical displays.
 
 ### Groupwise summary statistics
+
 At this point you need to refer to [Chapter 10](https://robwschlegel.github.io/Intro_R_Workshop/tidy.html) (Tidy data) and [Chapter 11](https://robwschlegel.github.io/Intro_R_Workshop/tidier.html) (Tidier data) in the **Intro R Workshop** to remind yourself about in what format the data need to be before we can efficiently work with it. A hint: one observation in a row, and one variable per column. From this point, it is trivial to do the various data descriptions, visualisations, and analyses. Thankfully, the `chicks` data are already in this format.
 
 So, what are the summary statistics for the chickens for each diet group at day 21?
@@ -193,8 +233,9 @@ grp_stat <- chicks %>%
   filter(Time == 21) %>% 
   group_by(Diet, Time) %>% 
   summarise(mean_wt = round(mean(weight, na.rm = TRUE), 2),
-            sd_wt = round(sd(weight, na.rm = TRUE), 2),
             med_wt = median(weight, na.rm = TRUE),
+            sd_wt = round(sd(weight, na.rm = TRUE), 2),
+            sum_wt = sum(weight),
             min_wt = min(weight),
             qrt1_wt = quantile(weight, p = 0.25),
             med_wt = median(weight),
@@ -205,10 +246,10 @@ grp_stat
 ```
 
 ### Displays of group summaries
+
 There are several kinds of graphical displays for your data. We will show some which are able to display the spread of the raw data, the mean or median, as well as the appropriate accompanying indicators of variation around the mean or median.
 
-```{r}
-library(ggplot2)
+```{r, message=FALSE}
 library(ggpubr) # needed for arranging multi-panel plots
 plt1 <- chicks %>%
   filter(Time == 21) %>% 
@@ -216,7 +257,8 @@ plt1 <- chicks %>%
   geom_point(data = grp_stat, aes(x = Diet, y = mean_wt), 
              col = "black", fill = "red", shape = 23, size = 3) +
   geom_jitter(width = 0.05) + # geom_point() if jitter not required
-  labs(y = "Chicken mass (g)") + theme_pubr()
+  labs(y = "Chicken mass (g)") + 
+  theme_pubr()
 ```
 
 ```{r}
@@ -225,7 +267,8 @@ plt2 <- ggplot(data = grp_stat, aes(x = Diet, y = mean_wt)) +
            col = NA, fill = "salmon") +
   geom_errorbar(aes(ymin = mean_wt - sd_wt, ymax = mean_wt + sd_wt),
                 width = .2) +
-  labs(y = "Chicken mass (g)") + theme_pubr()
+  labs(y = "Chicken mass (g)") + 
+  theme_pubr()
 # position_dodge() places bars side-by-side
 # stat = "identity" prevents the default count from being plotted
 ```
@@ -236,7 +279,8 @@ plt3 <- chicks %>%
   ggplot(aes(x = Diet, y = weight)) +
   geom_boxplot(fill = "salmon") +
   geom_jitter(width = 0.05, fill = "white", col = "blue", shape = 21) +
-  labs(y = "Chicken mass (g)") + theme_pubr()
+  labs(y = "Chicken mass (g)") + 
+  theme_pubr()
 ```
 
 ```{r}
@@ -245,15 +289,15 @@ plt4 <- chicks %>%
   ggplot(aes(x = Diet, y = weight, fill = as.factor(Time))) +
   geom_boxplot() +
   geom_jitter(shape = 21, width = 0.1) +
-  labs(y = "Chicken mass (g)", fill = "Time")
+  labs(y = "Chicken mass (g)", fill = "Time") +
+  theme_pubr()
 ```
 
 ```{r, message = FALSE, fig.cap = "A) Scatterplot of the mean and raw chicken mass values. B) Bar graph of the chicken mass values, showing 'whiskers' indicating ±1 SD. C) Box and whisker plot of the chicken mass data. Please see the help file for `geom_boxplot()` for what the graph components mean."}
 ggarrange(plt1, plt2, plt3, plt4, ncol = 2, nrow = 2, labels = "AUTO")
 ```
 
-
 ## Exercises
 
 ### Exercise 1
-Notice how the data summary for chicken weights contained within `wt_summary` is very similar to the summary returned for `weight` when we apply `summary(chicks)`. Please use the `summarise()` approach and construct a data summary with exactly the same summary statistics for `weight` as which `summary()` returns.
+Notice how the data summary for chicken weights contained within `wt_summary` is very similar to the summary returned for `weight` when we apply `summary(chicks)`. Please use the `summarise()` approach and construct a data summary with exactly the same summary statistics for `weight` as that which `summary()` returns.
